--- a/app/src/main/res/layout/ac_auth.xml
+++ b/app/src/main/res/layout/ac_auth.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/password_hint"
         android:layout_marginLeft="8dp"
+        android:inputType="textPassword"
         android:layout_marginRight="8dp" />
 
     <LinearLayout
